<resources>
    <string name="app_name">ShivRana_COMP304_Assign6</string>
    <string name="selection">Please select one of the following</string>
    <string name="smsApp">Messaging App</string>
    <string name="Sms">Sms App</string>
    <string name="sender">Mobile Number</string>
    <string name="messsage">Message will come here</string>
    <string name="planTrip">Plan Trip</string>
    <string name="planYourTrip">Plan Your Trip</string>
    <string name="from">From</string>
    <string name="destination">Destination</string>
    <string name="generateDirection">Show Direction</string>
</resources>
