<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/mainbackground">

    <TextView
        style="@style/Title"
        android:layout_marginTop="70dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selection"/>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <TableRow
        android:layout_marginStart="30dp"
        android:layout_marginTop="100dp">
        <TextView
            style="@style/Content"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/smsApp"/>

        <Button
            android:id="@+id/smsButton"
            style="@style/Editable_Controls"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/chat"/>
    </TableRow>
        <TableRow
            android:layout_marginTop="30dp"
            android:layout_marginStart="30dp">
            <TextView
                style="@style/Content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/planTrip"/>

            <Button
                android:id="@+id/tripPlanBtn"
                style="@style/Editable_Controls"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/trip" />
        </TableRow>
    </TableLayout>
</LinearLayout>